@@ -9,11 +9,10 @@ class NativeEventFilter : public QObject, public QAbstractNativeEventFilter
         Q_OBJECT
     public:
         NativeEventFilter();
-        virtual bool nativeEventFilter(const QByteArray &eventType, void *message, long *) Q_DECL_OVERRIDE;
+        virtual bool nativeEventFilter(const QByteArray &, void *message, long *) Q_DECL_OVERRIDE;
 
     private:
         Q_DISABLE_COPY(NativeEventFilter)
-        int count;
 
     signals:
         void hotkeyPressed();
